--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
         <fieldset>
             <legend>Education <i class="fa-solid fa-user-graduate"></i></legend>
             <label for="education">Education:</label>
-            <textarea name="skills" id="education" placeholder="Enter Your Skills" required rows="2"></textarea>
+            <textarea name="skills" id="education" placeholder="Enter Your Education" required rows="2"></textarea>
         </fieldset>
 
         <fieldset>
